# oil_and_gas_sensors_registering_api

./: .dockerignore  Dockerfile  Dockerfile.tests  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 59362898ecd3_create_sensor_table.py
app/: main.py
app/api/: routes.py
app/sensors/api/: routes.py
app/sensors/crud/: sensor.py
app/sensors/db/: session.py
app/sensors/models/: sensor.py
app/sensors/schemas/: sensor.py
tests/: test_crud.py  test_routes.py
