[project]
name = "sensors-monitoring"
version = "0.1.0"
description = "A rest api to registering and monitoring oil and gas station sensors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.17",
    "sqlmodel>=0.0.22",
]
